--- a/packages/@rnw-scripts/integrate-rn/package.json
+++ b/packages/@rnw-scripts/integrate-rn/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rnw-scripts/promote-release",
-  "version": "0.1.0",
+  "name": "@rnw-scripts/integrate-rn",
+  "version": "0.0.0",
   "license": "MIT",
   "scripts": {
     "build": "just-scripts build",
@@ -10,21 +10,23 @@
     "watch": "just-scripts watch"
   },
   "bin": {
-    "promote-release": "./bin.js"
+    "integrate-rn": "./bin.js"
   },
   "dependencies": {
     "@rnw-scripts/find-repo-root": "^0.0.4",
-    "@rnw-scripts/package-utils": "^0.0.0",
-    "chalk": "^4.1.0",
-    "simple-git": "^1.131.0",
-    "yargs": "^15.3.1"
+    "get-monorepo-packages": "^1.2.0",
+    "lodash": "^4.17.15",
+    "ora": "^4.0.3",
+    "react-native-platform-override": "^0.2.1",
+    "semver": "^7.3.2"
   },
   "devDependencies": {
     "@rnw-scripts/eslint-config": "0.0.2",
     "@rnw-scripts/just-task": "0.0.2",
     "@rnw-scripts/ts-config": "0.1.0",
-    "@types/chalk": "^2.2.0",
-    "@types/yargs": "^15.0.5",
+    "@types/lodash": "^4.14.157",
+    "@types/ora": "^3.2.0",
+    "@types/semver": "^7.3.1",
     "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
