--- a/vnext/package.json
+++ b/vnext/package.json
@@ -21,7 +21,10 @@
     "validate-overrides": "react-native-platform-override validate"
   },
   "dependencies": {
-    "@babel/runtime": "^7.8.4",
+    "@babel/runtime": "^7.0.0",
+    "@react-native-community/cli": "^4.2.4",
+    "@react-native-community/cli-platform-android": "^4.2.3",
+    "@react-native-community/cli-platform-ios": "^4.2.3",
     "@react-native-windows/cli": "0.0.0-canary.1",
     "abort-controller": "^3.0.0",
     "anser": "^1.4.9",
@@ -29,12 +32,18 @@
     "event-target-shim": "^5.0.1",
     "fbjs": "^1.0.0",
     "fbjs-scripts": "^1.1.0",
+    "hermes-engine": "~0.4.0",
     "invariant": "^2.2.4",
+    "jsc-android": "^245459.0.0",
+    "metro-babel-register": "0.59.0",
+    "metro-react-native-babel-transformer": "0.59.0",
+    "metro-source-map": "0.59.0",
     "nullthrows": "^1.1.1",
     "pretty-format": "^24.9.0",
     "promise": "^8.0.3",
     "prop-types": "^15.7.2",
     "react-devtools-core": "^4.6.0",
+    "react-refresh": "^0.4.0",
     "regenerator-runtime": "^0.13.2",
     "scheduler": "0.19.1",
     "stacktrace-parser": "^0.1.3",
@@ -45,15 +54,15 @@
     "@microsoft/api-documenter": "^7.3.8",
     "@microsoft/api-extractor": "^7.3.8",
     "@react-native-community/eslint-config": "^1.1.0",
-    "@types/react-native": "^0.62.10",
     "@types/react": "16.9.0",
+    "@types/react-native": "^0.62.10",
     "eslint": "6.7.0",
-    "flow-bin": "^0.122.0",
     "eslint-plugin-prettier": "2.6.2",
+    "flow-bin": "^0.122.0",
     "jscodeshift": "^0.7.0",
     "just-scripts": "^0.36.1",
     "prettier": "1.17.0",
-    "react": "16.13.0",
+    "react": "16.13.1",
     "react-native": "0.0.0-4a48b021d",
     "react-native-platform-override": "^0.2.1",
     "react-native-windows-codegen": "0.0.10",
