--- a/packages/@rnw-scripts/integrate-rn/package.json
+++ b/packages/@rnw-scripts/integrate-rn/package.json
@@ -14,11 +14,12 @@
   },
   "dependencies": {
     "@rnw-scripts/find-repo-root": "^0.0.4",
-    "get-monorepo-packages": "^1.2.0",
+    "@rnw-scripts/package-utils": "^0.0.0",
     "lodash": "^4.17.15",
     "ora": "^4.0.3",
     "react-native-platform-override": "^0.2.1",
-    "semver": "^7.3.2"
+    "semver": "^7.3.2",
+    "yargs": "^15.3.1"
   },
   "devDependencies": {
     "@rnw-scripts/eslint-config": "0.0.2",
@@ -27,6 +28,7 @@
     "@types/lodash": "^4.14.157",
     "@types/ora": "^3.2.0",
     "@types/semver": "^7.3.1",
+    "@types/yargs": "^15.0.5",
     "eslint": "6.7.0",
     "just-scripts": "^0.36.1",
     "typescript": "^3.8.3"
