--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -52,9 +52,8 @@ jobs:
         #Arm64Release:
         #  BuildConfiguration: Release
         #  BuildPlatform: ARM64
-    pool:
-      vmImage: $(VmImage)
-    timeoutInMinutes: 60
+    pool: rnw-ci-agentpool
+    timeoutInMinutes: 120
     cancelTimeoutInMinutes: 5
 
     steps:
@@ -151,8 +150,7 @@ jobs:
         X86:
           BuildConfiguration: Debug
           BuildPlatform: x86
-    pool:
-      vmImage: $(VmImage)
+    pool: rnw-ci-agentpool
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
 
@@ -304,8 +302,7 @@ jobs:
         #  BuildPlatform: ARM64
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
-    pool:
-      vmImage: $(VmImage)
+    pool: rnw-ci-agentpool
     variables:
       BuildLogDirectory:  $(Build.BinariesDirectory)\$(BuildPlatform)\$(BuildConfiguration)\BuildLogs
 
