--- a/.ado/windows-vs-pr.yml
+++ b/.ado/windows-vs-pr.yml
@@ -52,7 +52,7 @@ jobs:
         #Arm64Release:
         #  BuildConfiguration: Release
         #  BuildPlatform: ARM64
-    pool: rnw-ci-agentpool
+    pool: rnw-ci
     timeoutInMinutes: 120
     cancelTimeoutInMinutes: 5
 
@@ -150,7 +150,7 @@ jobs:
         X86:
           BuildConfiguration: Debug
           BuildPlatform: x86
-    pool: rnw-ci-agentpool
+    pool: rnw-ci
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
 
@@ -302,7 +302,7 @@ jobs:
         #  BuildPlatform: ARM64
     timeoutInMinutes: 60
     cancelTimeoutInMinutes: 5
-    pool: rnw-ci-agentpool
+    pool: rnw-ci
     variables:
       BuildLogDirectory:  $(Build.BinariesDirectory)\$(BuildPlatform)\$(BuildConfiguration)\BuildLogs
 
