--- a/vnext/Desktop/React.Windows.Desktop.vcxproj.filters
+++ b/vnext/Desktop/React.Windows.Desktop.vcxproj.filters
@@ -83,11 +83,30 @@
     <ClCompile Include="Modules\WebSocketModule.cpp">
       <Filter>Source Files\Modules</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp" />
-    <ClCompile Include="$(GeneratedFilesDir)module.g.cpp">
-      <Filter>Generated Files</Filter>
-    </ClCompile>
     <ClCompile Include="WebSocketResourceFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Microsoft.ReactNative\NativeModulesProvider.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\TurboModulesProvider.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\ABICxxModule.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\DynamicReader.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\DynamicWriter.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\IReactContext.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\IReactModuleBuilder.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\JsiReader.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\JsiWriter.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\ReactPackageBuilder.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\RedBox.cpp" />
+    <ClCompile Include="..\Microsoft.ReactNative\RedBoxErrorFrameInfo.cpp">
+      <Filter>ABI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Microsoft.ReactNative\RedBoxErrorInfo.cpp">
+      <Filter>ABI</Filter>
+    </ClCompile>
+    <ClCompile Include="RuntimeOptions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -103,6 +122,12 @@
     </ClInclude>
     <ClInclude Include="ABI\NativeTraceEventSource.h">
       <Filter>ABI</Filter>
+    </ClInclude>
+    <ClInclude Include="ABI\TestController.h">
+      <Filter>ABI</Filter>
+    </ClInclude>
+    <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -134,8 +159,11 @@
     <ClInclude Include="NativeModuleFactories.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BeastWebSocketResource.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\Microsoft.ReactNative\RedBoxErrorFrameInfo.h">
+      <Filter>ABI</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Microsoft.ReactNative\RedBoxErrorInfo.h">
+      <Filter>ABI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
