Fix integrate-rn bug with dependency syncing added late PR

--- a/packages/@rnw-scripts/integrate-rn/package.json
+++ b/packages/@rnw-scripts/integrate-rn/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@rnw-scripts/find-repo-root": "^0.0.4",
     "@rnw-scripts/package-utils": "^0.0.1",
+    "async": "^3.2.0",
     "lodash": "^4.17.15",
     "ora": "^4.0.3",
     "react-native-platform-override": "^0.2.1",
@@ -25,6 +26,7 @@
     "@rnw-scripts/eslint-config": "0.0.2",
     "@rnw-scripts/just-task": "0.0.2",
     "@rnw-scripts/ts-config": "0.1.0",
+    "@types/async": "^3.2.3",
     "@types/lodash": "^4.14.157",
     "@types/ora": "^3.2.0",
     "@types/semver": "^7.3.1",
