--- a/.ado/templates/yarn-install.yml
+++ b/.ado/templates/yarn-install.yml
@@ -2,4 +2,4 @@ steps:
   - task: CmdLine@2
     displayName: midgard-yarn (faster yarn install)
     inputs:
-      script: npx midgard-yarn@1.23.14 --network-concurrency 40 --frozen-lockfile --cache-folder \.yarnCache
+      script: npx midgard-yarn@1.23.14 --network-concurrency 40 --frozen-lockfile --cache-folder $(MIDGARD_YARN_CACHE_DIR) --prefer-offline
