--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj.filters
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj.filters
@@ -328,6 +328,9 @@
     </ClCompile>
     <ClCompile Include="RedBoxErrorInfo.cpp" />
     <ClCompile Include="RedBoxErrorFrameInfo.cpp" />
+    <ClCompile Include="JSI\ChakraJsiRuntime_edgemode.cpp">
+      <Filter>JSI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ABICxxModule.h" />
@@ -790,6 +793,9 @@
     </Filter>
     <Filter Include="Views\Impl">
       <UniqueIdentifier>{b0b76275-4a16-4939-87ee-f777cb189114}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="JSI">
+      <UniqueIdentifier>{c97f47b4-3ff1-4b73-ad86-02d29af81676}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
