Update Chakra JSI implementation

--- a/vnext/JSI/Shared/JSI.Shared.vcxitems.filters
+++ b/vnext/JSI/Shared/JSI.Shared.vcxitems.filters
@@ -12,9 +12,6 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)ByteArrayBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)ChakraObjectRef.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)RuntimeHolder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -30,13 +27,12 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)ChakraRuntimeFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)ChakraApi.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="$(MSBuildThisFileDirectory)ChakraObjectRef.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="$(MSBuildThisFileDirectory)ChakraRuntime.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)ChakraApi.cpp" />
   </ItemGroup>
 </Project>
