--- a/vnext/Desktop.UnitTests/React.Windows.Desktop.UnitTests.vcxproj.filters
+++ b/vnext/Desktop.UnitTests/React.Windows.Desktop.UnitTests.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="WinRTNetworkingMocks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="JsiRuntimeUnitTests.cpp">
+      <Filter>Unit Tests</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
