--- a/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj
+++ b/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj
@@ -105,6 +105,8 @@
       </AdditionalIncludeDirectories>
       <UseFullPaths>true</UseFullPaths>
       <CallingConvention>Cdecl</CallingConvention>
+      <!-- RuntimeTypeInfo is required by JSI -->
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
     </ClCompile>
     <Midl>
       <AdditionalIncludeDirectories>$(ReactNativeWindowsDir)Microsoft.ReactNative;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -149,6 +151,10 @@
   </ItemDefinitionGroup>
   <Import Project="$(ReactNativeWindowsDir)\PropertySheets\ReactCommunity.cpp.props" />
   <ItemGroup>
+    <ClInclude Include="$(JSI_SourcePath)\jsi\test\testlib.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ChakraEdgeRuntimeTests.cpp" />
     <ClCompile Include="DynamicReaderTest.cpp" />
     <ClCompile Include="JsiArgumentReaderTest.cpp" />
     <ClCompile Include="JsiReaderTest.cpp" />
@@ -158,6 +164,13 @@
     </ClCompile>
     <ClInclude Include="CommonReaderTest.h" />
     <ClInclude Include="pch/pch.h" />
+    <ClCompile Include="$(JSI_SourcePath)\jsi\test\testlib.cpp">
+      <!--
+        C4245 - 'initializing': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
+        C4389 - '==': signed/unsigned mismatch
+      -->
+      <DisableSpecificWarnings>4245;4389;$(DisableSpecificWarnings)</DisableSpecificWarnings>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
