Address PR feedback

--- a/vnext/JSI/Shared/JSI.Shared.vcxitems.filters
+++ b/vnext/JSI/Shared/JSI.Shared.vcxitems.filters
@@ -27,12 +27,16 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)ChakraRuntimeFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)ChakraApi.h" />
+    <ClInclude Include="$(MSBuildThisFileDirectory)ChakraApi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MSBuildThisFileDirectory)ChakraRuntime.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)ChakraApi.cpp" />
+    <ClCompile Include="$(MSBuildThisFileDirectory)ChakraApi.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
