Address PR feedback

--- a/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj
+++ b/vnext/Microsoft.ReactNative.ComponentTests/Microsoft.ReactNative.ComponentTests.vcxproj
@@ -105,8 +105,6 @@
       </AdditionalIncludeDirectories>
       <UseFullPaths>true</UseFullPaths>
       <CallingConvention>Cdecl</CallingConvention>
-      <!-- RuntimeTypeInfo is required by JSI -->
-      <RuntimeTypeInfo>true</RuntimeTypeInfo>
     </ClCompile>
     <Midl>
       <AdditionalIncludeDirectories>$(ReactNativeWindowsDir)Microsoft.ReactNative;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -166,10 +164,17 @@
     <ClInclude Include="pch/pch.h" />
     <ClCompile Include="$(JSI_SourcePath)\jsi\test\testlib.cpp">
       <!--
+        The JSI tests have a number of violations that we must suppress to avoid chaning the code.
+        C4100 - unreferenced formal parameter
         C4245 - 'initializing': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
         C4389 - '==': signed/unsigned mismatch
+        C4458 - declaration of '<varname>' hides class member
       -->
-      <DisableSpecificWarnings>4245;4389;$(DisableSpecificWarnings)</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4100;4245;4389;4458;$(DisableSpecificWarnings)</DisableSpecificWarnings>
+      <!-- JSI tests require RuntimeTypeInfo -->
+      <RuntimeTypeInfo>true</RuntimeTypeInfo>
+      <!-- To avoid RuntimeTypeInfo conflict with project's PCH -->
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
