Update Chakra JSI implementation (2)

--- a/vnext/JSI/Shared/JSI.Shared.vcxitems.filters
+++ b/vnext/JSI/Shared/JSI.Shared.vcxitems.filters
@@ -12,9 +12,6 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)ByteArrayBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="$(MSBuildThisFileDirectory)ChakraObjectRef.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)RuntimeHolder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -30,12 +27,15 @@
     <ClInclude Include="$(MSBuildThisFileDirectory)ChakraRuntimeFactory.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="$(MSBuildThisFileDirectory)ChakraApi.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="$(MSBuildThisFileDirectory)ChakraObjectRef.cpp">
+    <ClCompile Include="$(MSBuildThisFileDirectory)ChakraRuntime.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(MSBuildThisFileDirectory)ChakraRuntime.cpp">
+    <ClCompile Include="$(MSBuildThisFileDirectory)ChakraApi.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
