--- a/.ado/templates/react-native-init.yml
+++ b/.ado/templates/react-native-init.yml
@@ -70,6 +70,13 @@ steps:
     inputs:
       versionSpec: ">=4.6.0"
 
+  - ${{ if eq(parameters.useNuGet, true) }}:
+    - template: prep-and-pack-nuget.yml
+      parameters:
+        npmVersion: $(npmVersion)
+        packDesktop: false
+        slices: '("${{ parameters.platform }}.${{ parameters.configuration }}")'
+
   # We force the usage of npm instead of yarn becuase yarn has fragility issues when redirected to a different server (such as verdaccio)
   - task: CmdLine@2
     displayName: Init new project
@@ -77,13 +84,6 @@ steps:
       script: npx react-native init testcli --npm --template react-native@$(reactNativeDevDependency)
       workingDirectory: $(Agent.BuildDirectory)
 
-  - task: DownloadBuildArtifacts@0
-    displayName: 'Download Nuget Test Feed'
-    inputs:
-      artifactName: NuGetTestFeed
-      downloadPath: $(System.DefaultWorkingDirectory)
-    condition: and(succeeded(), ${{ parameters.useNuGet }})
-    
   - task: CmdLine@2
     displayName: Apply windows template (with nuget)
     inputs:
