Integrate 5/16 Nightly RN Build
See original  commits here https://github.com/facebook/react-native/compare/30a89f30c...6a96a9f65

--- a/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
+++ b/vnext/Microsoft.ReactNative/Microsoft.ReactNative.vcxproj
@@ -110,7 +110,9 @@
         $(JSI_SourcePath);
         $(ReactNativeDir)ReactCommon;
         $(ReactNativeDir)ReactCommon\callinvoker;
-        $(ReactNativeDir)ReactCommon\jsi;
+        $(ReactNativeDir)ReactCommon\jsiexecutor;
+        $(ReactNativeDir)ReactCommon\reactperflogger;
+        $(ReactNativeDir)ReactCommon\runtimeexecutor;
         $(ReactNativeWindowsDir);
         $(ReactNativeWindowsDir)Common;
         $(ReactNativeWindowsDir)stubs;
